# Learn-React

./: .gitignore  app.py  chat.ipynb  output.docx  package-lock.json  pyproject.toml  test.py  user.ipynb
deepgram/: .env  QuickAgent.py
developer/: dropbox copy.json
src/: App.tsx  Message.tsx
src/components/: Alert.tsx  Button.tsx  Like.tsx
src/components/Button/: Button.module.css  Button.tsx
src/components/ListGroup/: ListGroup.module.css  ListGroup.tsx
