[tool.poetry]
name = "ace"
version = "0.1.0"
description = ""
authors = ["amazingct <amazing.comptech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
ionic-langchain = "^0.2.3"
langchain-openai = "^0.1.3"
openai = "^1.20.0"
langgraph = "^0.0.37"
opencv-python = "^4.9.0.80"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
psycopg2 = "^2.9.9"
dropbox = "^11.36.2"
flask-session = "^0.8.0"
redis = "^5.0.3"
groq = "^0.5.0"
langchain-groq = "^0.1.2"
deepgram-sdk = "^3.2.6"
websocket = "^0.2.1"
websockets = "^12.0"
websocket-client = "^1.7.0"
python-dotenv = "^1.0.1"
pyaudio = "^0.2.14"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
